chore: Downgrade to JDK 17